Algoritmo Usado Recientemente Terminado

--- a/Proyecto2.1/Proyecto2.1.csproj
+++ b/Proyecto2.1/Proyecto2.1.csproj
@@ -85,6 +85,7 @@
     <Compile Include="MMU.Designer.cs">
       <DependentUpon>MMU.cs</DependentUpon>
     </Compile>
+    <Compile Include="MRU.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Algoritmo.resx">
