--- a/Proyecto2.1/Proyecto2.1.csproj
+++ b/Proyecto2.1/Proyecto2.1.csproj
@@ -88,6 +88,7 @@
     <Compile Include="MRU.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Segundaoportunidad.cs" />
     <EmbeddedResource Include="Algoritmo.resx">
       <DependentUpon>Algoritmo.cs</DependentUpon>
     </EmbeddedResource>
