--- a/Proyecto2.1/Proyecto2.1.csproj
+++ b/Proyecto2.1/Proyecto2.1.csproj
@@ -73,6 +73,7 @@
       <DependentUpon>Algoritmo.cs</DependentUpon>
     </Compile>
     <Compile Include="ExcelLecturas.cs" />
+    <Compile Include="FIFO.cs" />
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
