PROYECTO TERMIBADO V1.0, NO SE PUEDEN CAMBIAR LAS REFERENCIAS NI LOS MARCOS

--- a/Proyecto2.1/Proyecto2.1.csproj
+++ b/Proyecto2.1/Proyecto2.1.csproj
@@ -87,6 +87,7 @@
       <DependentUpon>MMU.cs</DependentUpon>
     </Compile>
     <Compile Include="MRU.cs" />
+    <Compile Include="Optimo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reloj.cs" />
